# Nexus-AI-Agent-

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml  nexus_session_plan.md  pyproject.toml
.github/workflows/: eval.yml
configs/: litellm_config.yaml  nexus.yaml
configs/defaults/: channels.yaml  intents.yaml  prompt_template.yaml  tools.yaml
configs/intents/: personal.yaml
configs/policies/: budget.yaml  guardian.yaml
docs/: architecture_rebuild_plan.md
scripts/: calibrate.py  onboard_tenant.py  run_evals.py
src/: config.py  main.py
src/agent/: loop.py  prompt.py  structured.py
src/channels/: base.py  message.py  telegram.py  voice.py  web.py  whatsapp.py
src/db/: client.py  models.py  supabase.py
src/grounding/: citations.py  entity_registry.py  repair.py  validator.py
src/memory/: context.py  semantic.py  summary.py  working.py
src/observability/: alerts.py  client.py  langfuse.py  pii.py
src/onboarding/: flow.py
src/orchestration/: budget.py  coordinator.py  guardian.py  manager.py  messages.py  specialists.py  task_board.py
src/proactive/: consent.py  jobs.py  scheduler.py
src/routing/: __init__.py  confidence.py  keyword.py  llm_classifier.py  models.py  (+1 more)
tests/: conftest.py  test_agent.py  test_api.py  test_calibrate.py  test_channels.py  test_db.py  test_eval_runner.py  test_grounding.py  test_memory.py  test_observability.py  test_orchestration.py  test_proactive.py  test_routing.py  test_runtime_modes.py  test_telegram.py  test_tenant.py  test_tool_servers.py  test_tools.py  test_whatsapp_channel.py
(+19 files in other folders)
